Estilizando pagina principal, descrição dos filmes Tobey Maguire e estilizando botões

--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -98,3 +98,8 @@
   background-image: url('../images/spiderman-tobey/movie-03/background.png');
   background-size: cover;
 }
+
+/* .s-spiderman-01-04 {
+  background-image: url('../images/spiderman-tobey/movie-03/background.png');
+  background-size: cover;
+} */
