--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -31,6 +31,15 @@ body::before {
   margin: 0 1.25rem;
 }
 
+.s-menu__item:hover {  
+  transform: scale(1.2);  
+}
+
+.s-menu__item a:hover {
+  color: var(--secundary-color);
+  font-weight: 700;
+}
+
 .s-menu__icon {
   width: 2.5rem;
   margin: 0 1.25rem;
@@ -50,7 +59,8 @@ body::before {
   width: 100%;
   height: 70vh;
   position: absolute;
-  transition: filter .5s ease-in-out;
+  /* transition: filter .5s ease-in-out; */
+  transition: 1s ease-in-out;
 }
 
 .s-card:nth-child(1) {
@@ -64,6 +74,10 @@ body::before {
 .s-card:nth-child(3) {
   transform: rotateY(240deg) translateZ(50vw);
 }
+/* 
+.s-card:nth-child(4) {
+  transform: rotateY(360deg) translateZ(50vw);
+} */
 
 .s-card__background {
   width: 100%;
@@ -120,7 +134,7 @@ body::before {
 }
 
 .s-controller__button:hover {
-  transform: scale(1.2);
+  transform: scale(1.2);  
 }
 
 .s-controller__button:nth-child(2) {
@@ -165,12 +179,14 @@ body#spider-man-03-hovered::before {
   background-image: url('../images/pic-sm-bg-03.jpg');
 }
 
-body[id^="spider-man-"]::before {
+body[id^="spider-man-"]::before {  
   opacity: 1;
 }
 
 body[id^="spider-man-"] .s-card:not(.s-card--hovered) {
   filter: grayscale(100%);
+  transition: 1s ease-in-out;
+  opacity: 0;
 }
 
 .s-card--hovered .s-card__title {
